# open-course-player

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
doc/: ARCHITECTURE.md  CHANGE_CHECKLIST.md  CONSTRAINTS.md  DESIGN_SYSTEM.md  FORMAT_TEST_REPORT.md  OPEN_SOURCE_COMPLIANCE.md  PLAYER_SUPPORT.md  PROJECT_PLAN.md  README.md  RELEASE.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_location.rs  lib.rs  main.rs  media_library.rs  media_server.rs  mpv.rs  playback_history.rs
src/api/: fileLocation.ts  mediaLibrary.ts  mediaServer.ts  mpv.ts  playbackHistory.ts  subtitles.ts
src/player/: mediaTypes.ts  playbackRouter.ts
src/player/adapters/: easyPlayerAdapter.ts  hlsAdapter.ts  mpegTsAdapter.ts  mpvAdapter.ts  webVideoAdapter.ts
src/store/modules/: library.ts
src/styles/: app.scss
src/types/: media.ts  vue-office.d.ts
src/views/player/: PlayerWorkspace.vue
src/views/player/components/: DocumentPreview.vue  FileTree.vue  LibraryList.vue  PlaybackSurface.vue  PlayerControls.vue
tools/: prepare-ffmpeg.mjs
tools/media-fixtures/: generate-fixtures.ps1
