[package]
name = "open-course-player"
version = "0.1.0"
description = "Open source desktop player for local course folders"
authors = ["open-course-player contributors"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "open_course_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-course-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
